--- a/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
@@ -1,65 +1,56 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.WeekdayActivityViews.WeekdayActivityContentProviderView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View.WeekdayActivityViews"
-        xmlns:resw="clr-namespace:RepositoryParser.Properties"
-        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
-        xmlns:monthActivityViews="clr-namespace:RepositoryParser.View.MonthActivityViews"
-        xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        mc:Ignorable="d"
-        Title="{x:Static resw:Resources.WeekdayActivity}" Height="600" Width="800"
-        DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivityContentProvider}"
-        Icon="../../Assets/Icons/Chart_Icon_Main.png">
-    <Window.Resources>
+﻿<UserControl x:Class="RepositoryParser.View.WeekdayActivityViews.WeekdayActivityContentProviderView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:RepositoryParser.View.WeekdayActivityViews"
+             xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
+             xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="600"
+             DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivityContentProvider}"
+             >
+    <UserControl.Resources>
         <DataTemplate DataType="{x:Type viewModel:WeekDayActivityViewModel}">
             <local:WeekdayActivityChartView/>
         </DataTemplate>
 
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
-    </Window.Resources>
-
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Closed">
-            <i:InvokeCommandAction Command="{Binding ClosedEventCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-
+    </UserControl.Resources>
+    
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="4*" MinWidth="300"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" MinHeight="60"/>
-            <RowDefinition Height="9*"/>
-            <RowDefinition Height="10"/>
-        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="4*" MinWidth="300"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" MinHeight="60"/>
+                <RowDefinition Height="9*"/>
+                <RowDefinition Height="10"/>
+            </Grid.RowDefinitions>
 
-        <Rectangle Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0">
-            <Rectangle.Fill>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="{StaticResource AppBorder}" Offset="0" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static resw:Resources.WeekdayActivityWindowTitle}" Style="{StaticResource AppTitleTextBlock}" />
-        <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
-            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn1">
-                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn1, Path=ActualWidth}">
-                    <Image Style="{StaticResource AppButtonIcon}"  Source="../../Assets/Icons/Poll Topic-50.png" />
-                    <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CountOfCommits}"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
+            <Rectangle Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0">
+                <Rectangle.Fill>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="{StaticResource AppBorder}" Offset="0" />
+                    </LinearGradientBrush>
+                </Rectangle.Fill>
+            </Rectangle>
+            <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static resw:Resources.WeekdayActivityWindowTitle}" Style="{StaticResource AppTitleTextBlock}" />
+            <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
+                <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn1">
+                    <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn1, Path=ActualWidth}">
+                        <Image Style="{StaticResource AppButtonIcon}"  Source="../../Assets/Icons/Poll Topic-50.png" />
+                        <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CountOfCommits}"/>
+                    </StackPanel>
+                </Button>
+            </StackPanel>
 
-        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentViewModel}"/>
+            <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentViewModel}"/>
 
-        <Image Grid.Row="1"
+            <Image Grid.Row="1"
                Grid.Column="1"
                Source="../../Resources/../Assets/Images/notebook_statiscitcs.png"
                HorizontalAlignment="Center"
@@ -70,6 +61,6 @@
                Visibility="{Binding CurrentViewModel, Converter={StaticResource ViewModelBaseToVisibilityConventer}}"
                />
 
+        </Grid>
     </Grid>
-</controls:MetroWindow>
-
+</UserControl>
